# PP

./: .gitignore  CMakeLists.txt  README.md
mpi/: CMakeLists.txt
mpi/task/block1/: block1Tasks.cpp
mpi/task/block2/: block2Tasks.cpp
mpi/task/block3/: block3Tasks.cpp
mpi/task/block4/: block4Tasks.cpp
mpi/task/block5/: block5Tasks.cpp
openmp/: CMakeLists.txt
openmp/task/block1/: task3.cpp  task5.cpp
openmp/task/block3/: task10.cpp  task11.cpp  task12.cpp  task9.cpp
openmp/task/block4/: task13.cpp  task14.cpp  task15.cpp
task/block1/: task1.cpp  task2.cpp  task4.cpp
task/block2/: task6.cpp  task7.cpp  task8.cpp
task/blockk2/: task7.cpp
